# kursach2

./: CMakeLists.txt  README.md  bgp  main.c
CLI/: CLI.h  CLI_structs.h  color_parser.c  coords_parser.c  create_struct.c  destroy_struct.c  function_parser.c  rectange_parser.c  rectangle_structs.h  thickness_parser.c
CLI/corner_parser/: corner_parser.c  corner_parser.h
CLI/frame_parser/: frame_parser.c  frame_parser.h
CLI/grayscale_parser/: grayscale_parser.c  grayscale_parser.h
CLI/options_parcer/: color_parser.c  coords_parser.c  options_parcer.h  thickness_parser.c
CLI/options_parser/: angle_parser.c  color_parser.c  coords_parser.c  count_sep.c  options_parser.h  thickness_parser.c  version_parser.c
CLI/rectangle_parcer/: rectange_parser.c
CLI/rectangle_parser/: rectange_parser.c  rectangle_parser.h
CLI/structs/: CLI_structs.h  create_struct.c  destroy_struct.c
corner_func/: corner.c  corner.h
errors/: error_message.c  errors.h
frame_func/: frame.c  frame.h
geometry/: geometry.h  matrix_mul.c  swap.c  swap_coords.c  validate_coord.c
grayscale_func/: grayscale.c  grayscale.h
image/: copy_canvas.c  copy_image.c  count_offset.c  create_image.c  destroy_image.c  image.h  image_structs.h  info.c  print_image.c  scan_image.c
messages/: error_message.c  errors.h  help_message.c  help_message.h  info_message.c  messages.h
rectange/: rectangle.c  rectangle.h  swap_coords.c  validate_coord.c
rectangle_func/: rectangle.c  rectangle.h
